<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
		<TextView
		android:id="@+id/nameLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/nameLabel"
		android:labelFor="@+id/nameEdit"
		android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
		android:id="@+id/nameEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		android:enabled="false" />
		<TextView
		android:id="@+id/dueLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dueLabel"
		android:labelFor="@+id/dueEdit"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	<EditText

		android:id="@+id/dueEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text" >
		<requestFocus />
		</EditText>
		<TextView
		android:id="@+id/classLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/classLabel"
		android:labelFor="@+id/classEdit"
		android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
		android:id="@+id/classEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text" />
		<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnUpdate"
		android:onClick="updateDB" />
</LinearLayout>
